kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-demo
  namespace: argocd-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: argocd-demo
  template:
    metadata:
      labels:
        app: argocd-demo
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
      - name: argocd-demo
        image: ghcr.io/cloudsteak/argocd-demo:17b41af
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
