kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-demo-service
  namespace: argocd-demo
spec:
  selector:
    app: argocd-demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
